5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1679_1107.log
== TEST (2019-04-30 16:57:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a==0):
	if(b%7==0)
		print("A entrada",a,"eh invalida")
	elif(b%7==0):
	print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:57:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a==0):
	if(b%7)
		print("A entrada",a,"eh invalida")
	elif(b%7):
	print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:57:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a==0):
	if(b%7)
		print("A entrada",a,"eh invalida")
	elif(b%7):
		print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:02:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a==0):
	if(b%7==0)
		print("A entrada",a,"eh invalida")
	elif(b%7==1):
		print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:03:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a==0):
	if(b%7==0):
		print("A entrada",a,"eh invalida")
	elif(b%7==1):
		print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:38:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a==0):
	if(b%7==0):
		print("A entrada",a, "eh invalida")
	elif(b%7==1):
		print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:47:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))

if(a=="domingo"):
	if(b%7==0):
		print("A entrada",a,"eh invalida")
	elif(b%7==0):
		print("Hoje eh",a,"e o dia do futuro eh",b)
if(a=="segunda"):
	if(b%7==1):
		print("A entrada",a,"eh invalida")
	elif(b%7==1):
		print("Hoje eh",a,"e o dia do futuro eh",b)

-- ERROR:
File "XXXX", line 8
    if(b%7==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))
if(a<=7 and a==6)
if(a=="domingo"):
	if(b%7==0):
		print("A entrada",a,"eh invalida")
	elif(b%7==0):
		print("Hoje eh",a,"e o dia do futuro eh",b)
if(a=="segunda"):
	if(b%7==1):
		print("A entrada",a,"eh invalida")
	elif(b%7==1):
		print("Hoje eh",a,"e o dia do futuro eh",b)
if(a=="terca"):
	if(b%7==2):
		print("A entrada eh",a,"eh invalida")
	elif(b%7==1):
		print("Hoje eh",a,"e o dia do futuro eh",b)i		

-- ERROR:
File "XXXX", line 6
    if(a<=7 and a==6)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))
if(a<=7 and a==6)
	if(a=="domingo"):
		if(b%7==0):
			print("A entrada",a,"eh invalida")
		elif(b%7==0):
			print("Hoje eh",a,"e o dia do futuro eh",b)
	if(a=="segunda"):
		if(b%7==1):
			print("A entrada",a,"eh invalida")
		elif(b%7==1):
			print("Hoje eh",a,"e o dia do futuro eh",b)
	if(a=="terca"):
		if(b%7==2):
			print("A entrada eh",a,"eh invalida")
		elif(b%7==1):
			print("Hoje eh",a,"e o dia do futuro eh",b)i		

-- ERROR:
File "XXXX", line 6
    if(a<=7 and a==6)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
b=int(input("dia futuro: "))
if(a<=7 and a==6)
	if(a=="domingo"):
		if(b%7==0):
			print("A entrada",a,"eh invalida")
		elif(b%7==0):
			print("Hoje eh",a,"e o dia do futuro eh",b)
	if(a=="segunda"):
		if(b%7==1):
			print("A entrada",a,"eh invalida")
		elif(b%7==1):
			print("Hoje eh",a,"e o dia do futuro eh",b)
	if(a=="terca"):
		if(b%7==2):
			print("A entrada eh",a,"eh invalida")
		elif(b%7==1):
			print("Hoje eh",a,"e o dia do futuro eh",b)	

-- ERROR:
File "XXXX", line 6
    if(a<=7 and a==6)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:55:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or dia>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0):
		x="domingo"
	elif(x==1):
		x="segunda"
	elif(x==2):
		x="terca"
	elif(x==3):
		x="quarta"
	elif(x==4):
		x="quinta"
	elif(x==5):
		x="sexta"
	elif(x==6):
		x="sabado"
	print("Hoje eh",a,"e o dia futuro eh",x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(a<0 or dia>6):
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:55:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or a>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0):
		x="domingo"
	elif(x==1):
		x="segunda"
	elif(x==2):
		x="terca"
	elif(x==3):
		x="quarta"
	elif(x==4):
		x="quinta"
	elif(x==5):
		x="sexta"
	elif(x==6):
		x="sabado"
	print("Hoje eh",a,"e o dia futuro eh",x)
		

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:56:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or a>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0):
		x="domingo"
	elif(x==1):
		x="segunda"
	elif(x==2):
		x="terca"
	elif(x==3):
		x="quarta"
	elif(x==4):
		x="quinta"
	elif(x==5):
		x="sexta"
	elif(x==6):
		x="sabado"
	print("Hoje eh",x,"e o dia futuro eh",x)
		

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:00:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or a>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0 and a==0):
		x="domingo"
		a="domingo"
	elif(x==1 and a==1):
		x="segunda"
		a="segunda"
	elif(x==2 and a==2):
		x="terca"
		a="terca"
	elif(x==3 and a==3):
		x="quarta"
		a="quarta"
	elif(x==4 and a==4):
		x="quinta"
		a="quinta"
	elif(x==5 and a==5):
		x="sexta
		a="sexta"
	elif(x==6 and a==6):
		x="sabado"
		a="sabado"
			
	print("Hoje eh",a,"e o dia futuro eh",x)
		

-- ERROR:
File "XXXX", line 29
    x="sexta
           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:00:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or a>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0 and a==0):
		x="domingo"
		a="domingo"
	elif(x==1 and a==1):
		x="segunda"
		a="segunda"
	elif(x==2 and a==2):
		x="terca"
		a="terca"
	elif(x==3 and a==3):
		x="quarta"
		a="quarta"
	elif(x==4 and a==4):
		x="quinta"
		a="quinta"
	elif(x==5 and a==5):
		x="sexta"
		a="sexta"
	elif(x==6 and a==6):
		x="sabado"
		a="sabado"
			
	print("Hoje eh",a,"e o dia futuro eh",x)
		

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:04:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or a>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0):
		x="domingo"
	elif(x==1):
		x="segunda"
	elif(x==2):
		x="terca"
	elif(x==3 ):
		x="quarta"
	elif(x==4):
		x="quinta"
	elif(x==5):
		x="sexta"
	elif(x==6):
		x="sabado"
		
	
	if(a==0):
		a="domingo"	
	elif(a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif(a==3 ):
		a="quarta"
	elif(a==4):
		a="quinta"
	elif(a==5):
		a="sexta"
	elif(a==6):
		a="sabado"
		
	print("Hoje eh",a,"e o dia futuro eh",x)
		

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 22:04:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=int(input("dia semana : "))
if(a<0 or a>6):
	print("A entrada",a,"eh invalida")
else: 
	fut=int(input("Dias futuro: "))
	if(a+fut>6):
		x=(a+fut)%7
	else:
		x=a+fut
	if(x==0):
		x="domingo"
	elif(x==1):
		x="segunda"
	elif(x==2):
		x="terca"
	elif(x==3 ):
		x="quarta"
	elif(x==4):
		x="quinta"
	elif(x==5):
		x="sexta"
	elif(x==6):
		x="sabado"
		
	
	if(a==0):
		a="domingo"	
	elif(a==1):
		a="segunda"
	elif(a==2):
		a="terca"
	elif(a==3 ):
		a="quarta"
	elif(a==4):
		a="quinta"
	elif(a==5):
		a="sexta"
	elif(a==6):
		a="sabado"
		
	print("Hoje eh",a,"e o dia futuro eh",x)
		

-- EXECUTION TIME:
0.725085
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
